top sec  complete

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
     <div class="half-width">
         <h1>Welcome To <br> <span class="name-highlight">Muhammad Sumon</span> Website</h1>
         <h3>Professional Web Devoloper</h3>
         <p>I am a developer with a world class trainning. Now i work for many international company as a freelancer. I can make all types of website with limited time with html. You can hire me as your demand. </p>
+        <a class="a-button" href="https://www.facebook.com/MrMuhammadSumon" target="_blank">Hire Me</a>
     </div>
     <div class="half-width">
         <img src="img/sumon1.png" alt="">
