complete website done

--- a/index.html
+++ b/index.html
@@ -12,14 +12,43 @@
 <body>
    <section class="top-banner">
     <div class="half-width">
-        <h1>Welcome To <br> <span class="name-highlight">Muhammad Sumon</span> Website</h1>
-        <h3>Professional Web Devoloper</h3>
+        <h1>Welcome To <br> <span class="orange-highlight">Muhammad Sumon</span> Website</h1>
+        <h3>Professional Web Developer</h3>
         <p>I am a developer with a world class trainning. Now i work for many international company as a freelancer. I can make all types of website with limited time with html. You can hire me as your demand. </p>
-        <a class="a-button" href="https://www.facebook.com/MrMuhammadSumon" target="_blank">Hire Me</a>
+        <a class="a-button" href="https://www.facebook.com/MrMuhammadSumon" target="_blank">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="img/sumon1.png" alt="">
     </div>
    </section>
+   <section class="dreamer">
+    <div class="half-width">
+       <img src="img/sumon2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Big Dreamer</h2>
+        <h3>Become World's Best Web Dev</h3>
+        <p>I have learned basic html & CSS. Now I am trying to become world's best web developer. So, I am Working hard to make myself more Expert in this segment. My goal is to make our youth self-dependent by web development. </p>
+        <a class="a-button" href="https://www.facebook.com/MrMuhammadSumon" target="_blank">VISIT MY FACEBOOK</a>
+    </div>
+   </section>
+   <section class="exp">
+    <center><h2>Experiences</h2></center>
+    <div id="programmer" class="half-width single-exp">
+        <h2>New Programmer</h2>
+        <h3 class="orange-highlight">2023 - Present | New at Programming</h3>
+        <p>Recently I have completed my Web Development Course. Now I am ready for full time work. I have learn web developing unofficially. But You can trust my work which never disappointed you.</p>
+    </div>
+    <div id="learner" class="half-width single-exp">
+        <h2>Web Developing Learner</h2>
+        <h3 class="orange-highlight">2022 - 2023 | Learning Web Development</h3>
+        <p>At the last of 2022, I was took the decisssion of learning Web developing. First of all, i have learn the basic rules of HTML & CSS. All types of tags & all types of rules of css. After 4 month, i have made this portfolio by using my knowladge.</p>
+
+    </div>
+   </section>
+   
+   <footer>
+    <p>© Muhammad Sumon 2023, All Rights Reserved.</p>
+   </footer>
 </body>
 </html>
