--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 
     </div>
    </section>
-   
+   <address>
+    <h2 id="contacts">Connect With Me</h2>
+    <div class="half-width single-exp"><p>Address: <br> 45/Ka, R.C. Road, <br>Gandaria, Dhaka-1204</p></div>
+    <div class="half-width single-exp"><p>Contacts: <br>Mobile: +8801600006616 <br>e-Mail: freelancermuhammadsumon@gmail.com</p></div>
+   </address>
    <footer>
-    <p>© Muhammad Sumon 2023, All Rights Reserved.</p>
+    <p> ©Muhammad Sumon 2023, All Rights Reserved.</p>
    </footer>
 </body>
 </html>
