--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
     </div>
    </section>
-   <address>
+   <div>
     <h2 id="contacts">Connect With Me</h2>
     <div class="half-width single-exp"><p>Address: <br> 45/Ka, R.C. Road, <br>Gandaria, Dhaka-1204</p></div>
     <div class="half-width single-exp"><p>Contacts: <br>Mobile: +8801600006616 <br>e-Mail: freelancermuhammadsumon@gmail.com</p></div>
-   </address>
+   </div>
    <footer>
     <p> ©Muhammad Sumon 2023, All Rights Reserved.</p>
    </footer>
