--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
    </section>
    <div>
-    <h2 id="contacts">Connect With Me</h2>
+    <h2 id="contacts">Contact With Me</h2>
     <div class="half-width single-exp"><p>Address: <br> 45/Ka, R.C. Road, <br>Gandaria, Dhaka-1204</p></div>
     <div class="half-width single-exp"><p>Contacts: <br>Mobile: +8801600006616 <br>e-Mail: freelancermuhammadsumon@gmail.com</p></div>
    </div>
